--- a/src/components/ServicePage/Specialservice.css
+++ b/src/components/ServicePage/Specialservice.css
@@ -29,6 +29,8 @@
 .image {
   width: 100%;
   height: 300px;
+  object-fit: cover;
+  object-position: center;
   transition: transform 0.3s ease-in-out;
 }
 
@@ -62,11 +64,15 @@
 }
 
 .know-more-button {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 5px;
-  background-color: rgb(249, 203, 88);
+  background: #f4b12a;
+    padding: 10px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    border-radius: 20px;
+    border: none;
+    gap: 5px;
+    cursor: pointer;
 }
 
 .know-more-button:hover {
